# ckanext-ssm-config

./: .ahoy.yml  .env  .flake8  .gitignore  MANIFEST.in  README.md  dev-requirements.txt  docker-compose.yml  package.json  pyproject.toml  requirements-2.9.txt  requirements-dev.txt  requirements.txt  setup.py
.circleci/: build.sh
.docker/: Dockerfile-py2.ckan  Dockerfile-py3.ckan  Dockerfile-template.ckan  Dockerfile.ckan  test.ini
.docker/scripts/: create-test-data.sh  init-ext.sh  init.sh  serve.sh
.github/workflows/: publish.yml  pytest.yml  test.yml
ckanext/ssm/: config_declaration.yaml  plugin.py
ckanext/ssm/tests/: test_plugin.py
test/features/: environment.py
test/features/steps/: steps.py
